test/admin/language/english/finance/finance.php
<?php
// heading title
$_['heading_title'] 				= 'Finance';

// text
$_['text_edit'] 					= 'Edit';
$_['text_enable'] 					= 'Enable';
$_['text_disable'] 					= 'Disable';

// button
$_['button_insert'] 				= 'Insert';
$_['button_delete'] 				= 'Delete';
$_['button_save'] 					= 'Save';
$_['button_cancel'] 				= 'Cancel';

// column
$_['column_name']	 				= 'Name';
$_['column_group']	 				= 'Group';
$_['column_parent']	 				= 'Parent';
$_['column_order']	 				= 'Order';
$_['column_status'] 				= 'Status';
$_['column_action'] 				= 'Action';

// entry
$_['entry_name']	 				= 'Name:';
$_['entry_group']	 				= 'Group:';
$_['entry_order']	 				= 'Order:';
$_['entry_parent']	 				= 'Parent:';
$_['entry_status'] 					= 'Status:';

// error
$_['error_warning'] 				= 'Warning: Error!';
$_['error_name']					= 'Warning: Error Name is required!';
$_['error_parent']					= 'Warning: Error Parent is required!';
$_['error_order']					= 'Warning: Error Order is required!';
$_['text_success'] 					= 'Success: You have modified Finance!';
?>